@@ -1,0 +1,47 @@
+%% Begin copyright
+%%
+%%  /home/jrf/Documents/books/Books20/Docs/Hjs/test_hjs.tex
+%%
+%%   Part of the Books20 Project
+%%
+%%   Copyright 2022 James R. Fowler
+%%
+%%   All rights reserved. No part of this publication may be
+%%   reproduced, stored in a retrival system, or transmitted
+%%   in any form or by any means, electronic, mechanical,
+%%   photocopying, recording, or otherwise, without prior written
+%%   permission of the author.
+%%
+%%
+%% End copyright
+
+
+\documentclass[10pt,letterpaper]{book}
+
+\usepackage{books20}
+
+
+%
+% History
+% created 11 June 2022
+%
+%----------------------------------------------------------
+\begin{document}
+
+\frontmatter
+\pagestyle{empty}
+\title{Test of cat\_entry.py LaTeX output}
+\author{compiled by James R. Fowler}
+\date{copy of \today}
+\maketitle
+\clearpage
+
+\vspace*{5 in}
+\centerline{Copyright \copyright 2022 McDonald Observatory}
+\centerline{Fort Davis, Texas}
+
+\mainmatter
+\section*{Test Catalogue in the Harlan J.~Smith Style}
+\import{./}{test\_books}
+
+\end{document}
